# 68616564616C7573

./: .gitignore
Projekt/: .test_unified.cu.swp  .test_zerocopy.cu.swp  CMakeLists.txt  CTestConfig.cmake  code_conventions_cpp.txt  doxylog
Projekt/Assemble/: assemble_neumann.hpp
Projekt/Beispiele/CMake_Tutorial/: README.txt  README.txt~
Projekt/Beispiele/Code_Beispiel/: CMakeLists.txt  CMakeLists.txt~  README.txt  README.txt~
Projekt/Beispiele/Code_Beispiel/Code/: CMakeLists.txt  CMakeLists.txt~  Miscellaneous.hpp  Miscellaneous.h~  PATHING.h  (+2 more)
Projekt/Beispiele/Doxygen_Templates/: Funktionen.txt~  Headerdatei.txt  Headerdatei.txt~  Klassen.txt  Klassen.txt~  Quelltextdatei.txt  Quelltextdatei.txt~  README.txt  README.txt~
Projekt/Beispiele/Git_Tutorial/: README.txt
Projekt/Beispiele/zero_unified_example/: test_unified.cu  test_zerocopy.cu
Projekt/Code/: CMakeLists.txt  CMakeLists.txt~  CodekonventionenLESEN.txt  DIA.hpp  FileWriterTest.cpp  HostfileCreator.cpp  PCG.hpp  PCG_test.cpp  TO DO - CodeModellierung.TXT  Vector.hpp  Vector.tpp  Vektor.hpp  assemble.hpp  code_conventions_cpp.txt  dia.hpp  gpu_timer.hpp  gpumatoperations.hpp  heattest1.cpp  pcg.hpp  tunneltest.cpp  vector.hpp  vtkFileWriter.hpp  vtkfilewriter.hpp
Projekt/Dokumentation/: doxygen_config  doxygen_config~  index.html  main.html  tree.html
Projekt/assemble/: NICHT_BEARBEITEN_ALT_assemble_neumann.hpp  assemblierung.txt
Projekt/bench/: CMakeLists.txt  mv_bench.cpp  mv_bench_gpu.cpp  solverbench.cpp
Projekt/bench/include/: solverbench.hpp
Projekt/benchmark/: CMakeLists.txt
Projekt/benchmark/gpu_matvec/: matvec.cpp
Projekt/benchmark/mkl/: mkl.cpp
Projekt/documentation/: doxygen_config
Projekt/model/: board-v2.mtl  board.blend
Projekt/roofline_test/: CMakeLists.txt
Projekt/roofline_test/_blank/: CMakeLists.txt  blank.cpp  blank_cuda.cu
Projekt/roofline_test/axpy/: CMakeLists.txt  axpy.cpp  axpy_cuda.cu
Projekt/roofline_test/copy/: CMakeLists.txt  copy.cpp  copy_cuda.cu
Projekt/roofline_test/dotproduct/: CMakeLists.txt  dotproduct.cpp  dotproduct_cuda.cu
Projekt/roofline_test/l2norm/: CMakeLists.txt  l2norm.cpp  l2norm_cuda.cu
Projekt/roofline_test/l2norm_test/: CMakeLists.txt  l2norm_test.cpp  l2norm_test_cuda.cu
Projekt/roofline_test/matvec/: CMakeLists.txt  matvec.cpp  matvec_cuda.cu  matvecnorm.cpp
Projekt/roofline_test/maxnorm/: CMakeLists.txt  maxnorm.cpp  maxnorm_cuda.cu
Projekt/roofline_test/vector_mult_vector_reduce/: vmvr.cpp  vmvr_cuda.cu
Projekt/roofline_test/vmvr/: CMakeLists.txt  vmvr.cpp  vmvr_cuda.cu
Projekt/spmc/: masschain_colind.csr  masschain_rowptr.csr  masschain_vals.csr  whitaker3_colind.csr  whitaker3_rowptr.csr  whitaker3_vals.csr
Projekt/src/: .mult_mat_vec.cu.swo  .mult_mat_vec.cu.swp  CMakeLists.txt  assemble_test.cpp  assemblyLGS.cpp  assemblyMatrixRow.cpp  assemblyRHSLoad.cpp  assemblyRHSNeumann.cpp  basis.cpp  benchmark_ax.cpp  benchmark_ax_cuda.cu  board.list  calcL2Error.cpp  discretizer.cpp  discretizer_test.cpp  distellspmvgpu_test.cpp  dummy_example_cuda.cu  dummy_mult_mat_vec_mpi.cpp  getxyz.cpp  global.cpp  hostfile_test.txt  linalg.cu  logger.cpp  logger_test.cpp  mathfunction.cpp  mpihandler.cpp  mpihandler_test.cpp  mult_mat_vec.cu  neumann_demo.cpp  poisson_demo.cpp  quadratur.cpp  setup.cpp  setupA.cpp  threeblocks.list  usefull_demo.cpp  vtkwriter.cpp
Projekt/src/README/: hostfileREADME.txt
Projekt/src/include/: CMakeLists.txt  assemble.hpp  assemble.tmp.hpp  assemble.tpp  assemble.tpp.old  assemble2.hpp  assemble_neumann.hpp  assemblefem.hpp  assemblefem.tpp  assemblyLGS.cpp  assemblyMatrixRow.hpp  assemblyRHSLoad.hpp  assemblyRHSNeumann.hpp  basis.cpp  basis.hpp  basis_test.cpp  benchmark_help.hpp  bicgstabsolver.hpp  bicgstabsolver.tpp  discretizer.cpp  discretizer.hpp  distellpackmatrix.hpp  distellpackmatrix.tpp  distellpackmatrixgpu.hpp  distellpackmatrixgpu.tpp  fullvector.hpp  fullvector.tpp  fullvectorgpu.hpp  fullvectorgpu.tpp  getxyz.hpp  logger.hpp  logger.tpp  mathfunction.hpp  matrix.hpp  mpihandler.hpp  potentialgradients.hpp  potentialgradients.tpp  proto.hpp  quadratur.cpp  quadratur.hpp  (+13 more)
Projekt/src/old/: dummy_example_cuda.cu  dummy_example_mpi.cpp
Projekt/src/unittests/: donothing_test.cpp  logger_test.cpp  vtk_writer_test.cpp
Projekt/src_ax/: CMakeLists.txt  benchmark_ax.cpp  benchmark_ax_cuda.cu
Projekt/src_ax/include/: benchmark_help.hpp
Projekt/src_blank/: CMakeLists.txt  benchmark_blank.cpp  benchmark_blank_cuda.cu
Projekt/src_blank/include/: logger.hpp
Projekt/src_copy/: benchmark_copy.cpp  benchmark_copy_cuda.cu
Projekt/src_copy/include/: benchmark_help.hpp
Projekt/src_dotproduct/: CMakeLists.txt  benchmark_dotproduct.cpp  benchmark_dotproduct_cuda.cu
Projekt/src_dotproduct/include/: benchmark_help.hpp
Projekt/src_l2norm/: CMakeLists.txt  benchmark_l2norm.cpp  benchmark_l2norm_cuda.cu
Projekt/src_l2norm/include/: benchmark_help.hpp  logger_test.cpp
Projekt/src_maxnorm/: benchmark_maxnorm.cpp  benchmark_maxnorm_cuda.cu
Projekt/src_maxnorm/include/: benchmark_help.hpp
Projekt/src_profiling/: CMakeLists.txt  profile_ax.cpp  profile_ax_cuda.cu
Projekt/src_profiling/include/: cuda_code.cu
Projekt/srx_l2norm/: benchmark_l2norm.cpp  benchmark_l2norm_cuda.cu
Projekt/srx_l2norm/include/: benchmark_help.hpp
Projekt/tests/: CMakeLists.txt  assemble_FEM_test.cpp  basis_test.cpp  bicgstab_small_test.cpp  distellspmv_mpitest.cpp  distellspmv_test.cpp  distellspmvgpu_mpitest.cpp  distellspmvgpu_test.cpp  equipc_mpitest.cpp  equipc_test.cpp  femflow_test.cpp  fullgpu_test.cpp  fullvecctor_test.cpp  fullvector_test.cpp  fullvectorgpu_test.cpp  gradient_test.cpp  jacpc_mpitest.cpp  jacpc_test.cpp  logger_mpitest.cpp  neumann_mpitest.cpp  neumann_test.cpp  poisson_test.cpp  slicedgpu_test.cpp  slicedvecctor_test.cpp  slicedvector_test.cpp  slicedvectorgpu_test.cpp  vector_test.cpp  vtk_writer_test.cpp
Projekt/theorie/: Waermeleitung.tex
Projekt/util/: csrwrite.m
bandscal/: CMakeLists.txt  README.txt  bandscal.cpp  bandscal.h  cudahelper.h  mvb.cpp  slvb.cpp
(+140 files in other folders)
